fixed h1 font size on small view ports

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -232,7 +232,7 @@ a:hover, .card-footer a:hover {
 
   .heading {
     padding-top: 1rem;
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
 
   .medium-font {
